feat: fix to List